Rework project structure, update dependencies, move namespace, fix CS

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,12 +1,27 @@
-<phpunit bootstrap="./tests/bootstrap.php" colors="true">
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- https://phpunit.readthedocs.io/en/latest/configuration.html -->
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+         backupGlobals="false"
+         colors="true"
+         bootstrap="vendor/autoload.php"
+         failOnWarning="true"
+         cacheDirectory=".phpunit.cache"
+>
+    <coverage/>
+    <php>
+        <ini name="display_errors" value="1" />
+        <ini name="error_reporting" value="-1"/>
+        <ini name="memory_limit" value="2G"/>
+    </php>
     <testsuites>
-        <testsuite name="GenPhrase">
-            <directory>./tests/GenPhrase</directory>
+        <testsuite name="Project Test Suite">
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
-    <filter>
-        <whitelist>
-            <directory suffix=".php">library</directory>
-        </whitelist>
-    </filter>
+    <source>
+        <include>
+            <directory suffix=".php">src</directory>
+        </include>
+    </source>
 </phpunit>
