--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
-/tests                                         export-ignore
-/.gitattributes                                export-ignore
-/.gitignore                                    export-ignore
-/.travis.yml                                   export-ignore
-/phpunit.xml.dist                              export-ignore
-/library/GenPhrase/Random/MockRandomBytes.php  export-ignore
+/tests                          export-ignore
+/.editorconfig                  export-ignore
+/.gitattributes                 export-ignore
+/.gitignore                     export-ignore
+/.gitlab-ci.yml                 export-ignore
+/.php-cs-fixer.dist.php         export-ignore
+/composer-require-checker.json  export ignore
+/phpunit.xml.dist               export-ignore
+/renovate.json                  export ignore
