--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,33 @@
 {
-  "name": "genphrase/genphrase",
+  "name": "drenso/genphrase",
   "description": "Secure passphrase generator for PHP applications",
   "keywords": ["secure", "random","password","passphrase","generator","diceware"],
   "homepage": "https://github.com/timoh6/GenPhrase",
   "type": "library",
   "license": "MIT",
+  "minimum-stability": "stable",
   "require": {
-    "php": ">=5.3.0",
+    "php": ">=8.3",
     "ext-bcmath": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.5 || ^6.5"
+    "friendsofphp/php-cs-fixer": "3.68.3",
+    "phpstan/phpstan": "2.1.2",
+    "phpunit/phpunit": "11.5.6",
+    "rector/rector": "2.0.7"
   },
   "autoload": {
     "psr-4": {
-      "GenPhrase\\": "library/GenPhrase"
+      "Drenso\\GenPhrase\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "GenPhrase\\Tests\\": "tests/GenPhrase"
+      "Drenso\\GenPhrase\\Tests\\": "tests/phpunit/"
     }
+  },
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true
   }
 }
