--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=8.3",
-    "ext-bcmath": "*"
+    "ext-bcmath": "*",
+    "ext-mbstring": "*",
+    "ext-random": "*"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "3.68.3",
